--- a/EasyList/package.json
+++ b/EasyList/package.json
@@ -6,6 +6,7 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^1.0.0-alpha.2",
     "@microsoft/sp-client-base": "~1.0.0",
     "@microsoft/sp-core-library": "~1.4.1",
     "@microsoft/sp-lodash-subset": "~1.4.1",
