--- a/EasyList/package.json
+++ b/EasyList/package.json
@@ -21,6 +21,8 @@
     "@types/webpack-env": ">=1.12.1 <1.14.0",
     "dateformat": "^3.0.2",
     "jquery": "^3.2.1",
+    "npm": "^5.7.1",
+    "office-ui-fabric-react": "^5.57.0",
     "react": "15.6.2",
     "react-dom": "15.6.2",
     "sp-pnp-js": "^3.0.1"
